# Anglerfish

./: CMakeLists.txt  README.md  package.xml
include/: HitRecord.h  LaunchParams.h  Parser.h  Renderer.h  Scenario.h
include/materials/: .LambertianBRDF.h.swp  .MaterialDescription.h.swp  LambertianBRDF.h  LightBRDF.h  MaterialDescription.h  MirrorBRDF.h
include/utils/: .Color.h.swp  CUDABuffer.h  Color.h  Texture.h  mat_math.h  math.h  optix_util.h  shading_utils.h  spectrum.h  vec_math.h
src/: .Renderer.cpp.swp  .devicePrograms.cu.swp  Parser.cpp  Renderer.cpp  Texture.cpp  devicePrograms.cu  main.cpp
